完善模板文件

--- a/template/component/js.ejs
+++ b/template/component/js.ejs
@@ -5,6 +5,27 @@
 </template>
 <script>
 export default {
-    name: "<%=name%>"
+    name: "<%=name%>",
+    created() {
+
+    },
+    mounted() {
+        
+    },
+    activated() {
+        
+    },
+    computed: {
+
+    },
+    methods: {
+        
+    },
+    destroyed() {
+        
+    },
+    deactivated() {
+        
+    },
 }
 </script>
