--- a/template/component/ts.ejs
+++ b/template/component/ts.ejs
@@ -6,7 +6,13 @@
 <script lang="ts">
 import { defineComponent } from 'vue'
 export default defineComponent({
-    name: "<%=name%>"
+    name: "<%=name%>",
+    setup() {
+
+        return {
+            
+        }
+    }
     
 })
 </script>
